--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ input#comment-submit {
 	list-style: none;
 	margin-top: 16px;
 	margin-left: 0;
-    padding: 30px;
+  padding: 30px;
 }
 h2 {
 	position: relative;
@@ -931,6 +931,9 @@ padding-left: 0;
 	margin-top: 0;
 	padding-top: 14px;
 }
+.commentcontent p {
+	font-size: 0.9em;
+}
 .postcontent h1, .commentcontent h1,
 .postcontent h2, .commentcontent h2,
 .postcontent h3, .commentcontent h3,
@@ -1131,6 +1134,7 @@ h3 {
 	/*border-top-color: #ddd;*/
     border: 0;
     margin-bottom: 20px;
+    margin-top: 25px;
 }
 #main #postlist .commentlist li.bypostauthor {
 	/*border-top-color: #b3c4df;*/
