--- a/style.css
+++ b/style.css
@@ -932,7 +932,7 @@ padding-left: 0;
 	padding-top: 14px;
 }
 .commentcontent p {
-	font-size: 0.9em !important;
+	font-size: 13px !important;
 }
 .postcontent h1, .commentcontent h1,
 .postcontent h2, .commentcontent h2,
