--- a/style.css
+++ b/style.css
@@ -44,13 +44,12 @@ pre, code {
 	overflow: auto;
 }
 #header {
-	min-height: 120px;
 	position: relative;
 }
 #header .sleeve {
     float: left;
 	display: inline-block;
-	margin: 40px 10px 60px;
+	margin: 20px 10px;
 }
 #header .sleeve img {
 	width: 150px;
@@ -187,7 +186,7 @@ white-space: nowrap;
     color: #888;
     float: right;
     border: 1px solid #ccc;
-	margin: 40px 10px 60px;
+	margin: 20px 10px;
 	border: 0;
     line-height: 50px;
 }
